--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -69,7 +69,7 @@
                 </div>
                 <div class="btn-group" role="group">
                     <button type="button" id="following" class="btn btn-default" href="#tab4" data-toggle="tab"><span class="glyphicon glyphicon-headphones" aria-hidden="true"></span>
-                        <div class="hidden-xs">Users Following</div>
+                        <div class="hidden-xs">Fans</div>
                     </button>
                 </div>
             </div>
@@ -79,7 +79,6 @@
 
                     <div class="tab-pane fade in active" id="tab1">
                         <ul>
-                          <h6><span class= 'glyphicon glyphicon-heart'>No. of User Likes</span></h6>
                           <h6>Genre: <%=artist.genre%></h6>
                           <h6>Location: <%=artist.location%></h6>
                           <h6>Website: <a href="//<%=artist.website%>"><%=artist.website%></a></h6>
@@ -127,7 +126,7 @@
                     </div>
 
                     <div class="tab-pane fade in" id="tab4">
-                      <h3></h3>
+                      <h3><h6><span class= 'glyphicon glyphicon-heart'>No. of User Likes</span></h6></h3>
                     </div>
 
                   </div>
