--- a/views/artist/show.ejs
+++ b/views/artist/show.ejs
@@ -135,7 +135,7 @@
                     <div class="tab-pane fade in" id="tab4">
                       <h3><%=artist.usersWhoLike.length%> Fans</h3>
                       <ul> <% for (let i = 0; i < artist.usersWhoLike.length; i++) { -%>
-                        <li> <%=artist.usersWhoLike[i].username%> </li>
+                        <li> <a href="/user/<%=artist.usersWhoLike[i].id%>"> <%=artist.usersWhoLike[i].username%> </a></li>
                           <% } -%>
                       </ul>
                     </div>
