--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -84,6 +84,11 @@
 
 			        <div class="tab-pane fade in" id="tab2">
 			          <h3>Artists Liked</h3>
+			          	<ul>
+			          		<% for (let i = 0; i < user.artistsLiked.length; i++) { -%>
+			          			<li><a href="/artist/<%=user.artistsLiked[i].id%>"><%=user.artistsLiked[i].name%></a></li>
+			          		<% } -%>
+			      		</ul>
 			        </div>
 
 			        <div class="tab-pane fade in" id="tab3">
