--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -41,7 +41,7 @@
 			        </div>
 
 			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
-								<button type="button" class= "btn-lg" name="eventAttendees" id = "eventAttendance"><span class= "glyphicon glyphicon-plus"></span> Attend <%=event.name%></button>
+								<a class= "btn btn-info" href="/event/<%=event.id%>/addUser/<%=users[i].id%>">Attend <%=event.name%></a>
 
 			        </div>
 			    </div>
