--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -41,7 +41,12 @@
 			        </div>
 
 			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
-								<a class= "btn btn-info" href="/event/<%=event.id%>/addUser/<%=users[i].id%>">Attend <%=event.name%></a>
+			        		<%for (let i = 0; i < users.length; i++) {%>
+			        			<a href="/event/<%=event.id%>/addUser/<%=users[i].id%>">
+			        		<%}%>
+			        			<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Attend <%=event.name%></a>
+
+							
 
 			        </div>
 			    </div>
@@ -91,7 +96,11 @@
 					        </div>
 
 					        <div class="tab-pane fade in" id="tab3">
-					          <h3>Users Attending: <%= event.meta.going %></h3>
+					          <h3>Users Attending: <%= event.usersAttending.length %></h3>
+					          <ul> <% for (let i = 0; i < event.usersAttending.length; i++) { -%>
+		                        <li> <a href="/user/<%=event.usersAttending[i].id%>"> <%=event.usersAttending[i].username%> </a></li>
+		                          <% } -%>
+		                      </ul>
 					        </div>
 
 
