--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -93,6 +93,11 @@
 
 			        <div class="tab-pane fade in" id="tab3">
 			          <h3>Events Attending</h3>
+			          		<ul>
+      							<% for (let i = 0; i < user.eventsAttending.length; i++) { -%>
+        							<li><a href="/event/<%=user.eventsAttending[i].id%>"><%= user.eventsAttending[i].name%></li>
+      							<% } -%>
+      						</ul>
 			        </div>
 
 							<div class="tab-pane fade in" id="tab4">
