--- a/views/event/show.ejs
+++ b/views/event/show.ejs
@@ -41,7 +41,13 @@
 			        </div>
 
 			        <div class="card-info"> <span class="card-title"><h3> <%=event.name%> Info </h3></span>
-								<a class= "btn btn-info" href="/event/<%=event.id%>/addUser/<%=users[i].id%>">Attend <%=event.name%></a>
+
+
+								<% for (let i = 0; i < users.length; i++) { %>
+									<a href="/event/addUser/<%=users[i].id%>/<%=event.id%>"></a>
+
+								<% } %>
+								<span class= "glyphicon glyphicon-plus">Attend <%=event.name%></span>
 
 			        </div>
 			    </div>
