--- a/less/style.less
+++ b/less/style.less
@@ -324,11 +324,11 @@ a.nav-item.nav-link, div.dropdown-menu.show, div.dropdown-menu{
 	padding-left: 7px;
 }
 
-#sign-up {
-	padding-left: 20px;
-	padding-right: 20px;
-	margin-right: 12px;
-}
+// #sign-up {
+// 	padding-left: 20px;
+// 	padding-right: 20px;
+// 	margin-right: 12px;
+// }
 #browse, #navbar {
 	font-size: 20px;
 }
